hydra/test/test_examples/type_errors/undeclared_var2.tpc
init {
    if (true) {
        x = true;
    }
} 
telemetry {} 
check {}